force-app/main/default/objects/Soup_Username__mdt/Soup_Username__mdt.object-meta.xml
<CustomObject>
    <label>Soup_Username</label>
    <pluralLabel>Soup_Usernames</pluralLabel>
</CustomObject>