force-app/main/default/objects/Soup_Username__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>