force-app/main/default/objects/Soup_Username__mdt/fields/User_name__c.field-meta.xml
<CustomField>
    <fullName>User_name__c</fullName>
    <label>User_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>